# challenge

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: count_schools.py  school.py  school_search.py
test/e2e/: test_count.py  test_search.py
