[tool.poetry]
name = "challenge"
version = "0.1.0"
description = ""
authors = ["Rômulo Gatto <romulo.gatto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
mypy = "^0.991"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
